--- a/app/assets/stylesheets/protected_routes/channel_messages.scss
+++ b/app/assets/stylesheets/protected_routes/channel_messages.scss
@@ -5,6 +5,7 @@
   height: 94vh;
   border-radius: 3px;
   padding: 15px;
+  max-width: 650px;
   flex: 1;
 }
 
